# pdf-re-render

./: LICENSE  README.md  pyproject.toml  requirements.txt
app/: __init__.py  core.py  ui.py
pdf_re_render.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
