[project]
name = "pdf-re-render"
version = "0.1.0"
description = "Python GUI tool to re-render PDFs using Ghostscript to remove restriction flags."
readme = "README.md"
requires-python = ">=3.8"
authors = [ { name = "clarkewinshell" } ]
license = { text = "MIT" }

dependencies = [
  "ghostscript>=0.7",
  "PyPDF2>=3.0"
]

[project.urls]
Homepage = "https://github.com/clarkewinshell/pdf-re-render"
Source = "https://github.com/clarkewinshell/pdf-re-render"
Issues = "https://github.com/clarkewinshell/pdf-re-render/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]
